Update Docker configuration to target ARM architecture for improved compatibility

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PHP-FPM Service mit den nötigen PHP-Extensions
   php:
@@ -46,7 +44,7 @@ services:
       context: ./docker/mysql
       dockerfile: Dockerfile
       args:
-        DOCKER_PLATFORM: ${DOCKER_PLATFORM:-linux/amd64}
+        DOCKER_PLATFORM: ${DOCKER_PLATFORM:-linux/arm64v8}
     container_name: ticketumfrage_database
     restart: unless-stopped
     environment:
