--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,16 +38,15 @@ services:
       - ticketumfrage_network
     restart: unless-stopped
 
-  # MariaDB 10.5 Datenbank (ARM-kompatibel)
+  # Alpine MariaDB 10.5 Datenbank (ARM-kompatibel)
   database:
     build:
       context: ./docker/mysql
       dockerfile: Dockerfile
-      args:
-        DOCKER_PLATFORM: ${DOCKER_PLATFORM:-linux/arm64v8}
     container_name: ticketumfrage_database
     restart: unless-stopped
     environment:
+      # Umgebungsvariablen für yobasystems/alpine-mariadb
       MYSQL_DATABASE: ticket_mailer_db
       MYSQL_USER: ticketuser
       MYSQL_PASSWORD: ticketpassword
