Remove platform-specific build arguments from Dockerfiles for PHP and Nginx services

--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,5 +1,4 @@
-ARG DOCKER_PLATFORM=linux/arm64v8
-FROM --platform=${DOCKER_PLATFORM} nginx:alpine
+FROM nginx:alpine
 
 # Kopiere die Nginx-Konfiguration
 COPY conf.d /etc/nginx/conf.d/
