--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,5 +1,4 @@
-ARG DOCKER_PLATFORM=linux/arm64v8
-FROM --platform=${DOCKER_PLATFORM} php:8.1-fpm-bullseye
+FROM php:8.1-fpm-bullseye
 
 # Installiere Abhängigkeiten
 RUN apt-get update && apt-get install -y \
