Add initial Symfony configuration and setup
- Created bundles.php to register essential Symfony bundles.
- Added cache configuration in cache.yaml for application caching.
- Configured debug settings in debug.yaml for development environment.
- Set up Doctrine ORM and DBAL configurations in doctrine.yaml.
- Added migrations configuration in doctrine_migrations.yaml.
- Established framework settings in framework.yaml, including session and error handling.
- Configured mailer settings in mailer.yaml for email functionality.
- Set up routing configurations in routing.yaml and framework.yaml.
- Configured Twig settings in twig.yaml for template rendering.
- Added validation settings in validator.yaml for input validation.
- Configured web profiler settings in web_profiler.yaml for development debugging.
- Created preload.php for PHP preloading optimization.
- Defined controller routes in routes.yaml for application controllers.
- Added Docker Compose configuration for database connection and Nginx setup.
- Created .gitignore for migrations directory.
- Initialized symfony.lock with package versions and configurations.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - database
     environment:
       - APP_ENV=dev
-      - DATABASE_URL=mysql://ticketuser:ticketpassword@database:3306/ticket_mailer_db?serverVersion=mariadb-10&charset=utf8mb4
+      - DATABASE_URL=mysql://ticketuser:ticketpassword@database:3306/ticket_mailer_db?serverVersion=mariadb-10.11.2&charset=utf8mb4
     networks:
       - proxy-tier
     restart: unless-stopped
@@ -27,6 +27,8 @@ services:
       - ./docker/nginx/conf.d:/etc/nginx/conf.d
     depends_on:
       - php
+    ports:
+      - "8090:80"   
     networks:
       - proxy-tier
     restart: unless-stopped
