Update mailer configuration and add TestMailerCommand for testing email functionality

--- a/.env.dev
+++ b/.env.dev
@@ -2,10 +2,11 @@
 DATABASE_URL="mysql://ticketuser:ticketpassword@127.0.0.1:3306/ticket_mailer_db?serverVersion=mariadb-10.11.2&&charset=utf8mb4"
 
 # Mailer-Konfiguration
-MAILER_DSN=smtp://user:pass@smtp.example.com:587
+# Direkte IP-Adresse des Mailpit-Containers im proxy-tier Netzwerk verwenden
+MAILER_DSN=smtp://172.23.0.6:1025
 
 # Anwendungsparameter
-APP_ENV=prod
+APP_ENV=dev
 
 # Ticketumfrage-Tool spezifische Einstellungen
 APP_TEST_EMAIL=test@example.com
