--- a/.env
+++ b/.env
@@ -31,5 +31,5 @@ DATABASE_URL=mysql://ticketuser:ticketpassword@database:3306/ticket_mailer_db?se
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+MAILER_DSN=smtp://mailer:1025
 ###< symfony/mailer ###
