--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,14 +63,25 @@ services:
       retries: 3
       start_period: 10s
 
-  # Eigener SMTP-Server für ARM-Kompatibilität
+  # MailHog für E-Mail-Testing
+  mailhog:
+    image: mailhog/mailhog
+    container_name: ticketumfrage_mailhog
+    ports:
+      - "1025:1025"  # SMTP Port
+      - "8025:8025"  # Web UI Port
+    networks:
+      - proxy-tier
+    restart: unless-stopped
+
+  # Eigener SMTP-Server für ARM-Kompatibilität (als Backup oder Alternative zu MailHog)
   mailserver:
     build:
       context: ./docker/smtp
       dockerfile: Dockerfile
     container_name: ticketumfrage_mailserver
     ports:
-      - "1025:25"  # SMTP Port
+      - "1026:25"  # SMTP Port (geändert um Konflikt mit MailHog zu vermeiden)
     networks:
       - proxy-tier
     restart: unless-stopped
