Update .env configuration: refine database URL and SMTP settings, add email parameters

--- a/.env
+++ b/.env
@@ -22,14 +22,20 @@ APP_SECRET=2cf7a8f6b1a3668d88ae797af6388f1a
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-# DATABASE_URL="mysql://ticketuser:!ticketpassword@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 DATABASE_URL=mysql://ticketuser:ticketpassword@database:3306/ticket_mailer_db?serverVersion=mariadb-10.11.2&charset=utf8mb4
-# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://mailer:1025
+# MAILER_DSN wird nicht mehr verwendet - SMTP-Konfiguration erfolgt über die Datenbank (SMTPConfig Entity)
+# Fallback für Symfony Mailer (wird nur verwendet wenn keine DB-Konfiguration vorhanden ist)
+MAILER_DSN=smtp://localhost:25
 ###< symfony/mailer ###
+
+###> app/email ###
+# Fallback-Parameter für E-Mail-Konfiguration (werden nur verwendet wenn keine Datenbank-Konfiguration vorhanden ist)
+APP_TEST_EMAIL=test@example.com
+APP_EMAIL_SUBJECT="Ihre Rückmeldung zu Ticket {{ticketId}}"
+APP_SENDER_EMAIL=noreply@example.com
+APP_SENDER_NAME="Ticket-System"
+APP_TICKET_BASE_URL=https://www.ticket.de
+###< app/email ###
