feat(monitoring): Implement system health monitoring features
- Added MonitoringController to handle monitoring routes and responses.
- Created MonitoringService for health checks on database, webserver, and Docker containers.
- Introduced new CSS styles for the monitoring interface.
- Developed frontend monitoring page with real-time status updates.
- Added PowerShell and Bash scripts for health checks and notifications.
- Configured Zabbix integration for monitoring endpoints.
- Updated services.yaml to include monitoring service configuration.
- Created tests for MonitoringService to ensure functionality.

--- a/.env
+++ b/.env
@@ -39,3 +39,8 @@ APP_SENDER_EMAIL=noreply@example.com
 APP_SENDER_NAME="Ticket-System"
 APP_TICKET_BASE_URL=https://www.ticket.de
 ###< app/email ###
+
+###> app/monitoring ###
+# Basis-URL für den Monitoring-Dienst (wird für die Webserver-Erreichbarkeitsprüfung verwendet)
+APP_MONITORING_BASE_URL=http://localhost:8090
+###< app/monitoring ###
