--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,8 @@ parameters:
     app.sender_email: '%env(string:APP_SENDER_EMAIL)%'
     app.sender_name: '%env(string:APP_SENDER_NAME)%'
     app.ticket_base_url: '%env(string:APP_TICKET_BASE_URL)%'
+    # Monitoring Parameter
+    app.monitoring.base_url: '%env(string:APP_MONITORING_BASE_URL)%'
 
 services:
     # default configuration for services in *this* file
@@ -12,9 +14,7 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
-            $projectDir: '%kernel.project_dir%'
-
-    # makes classes in src/ available to be used as services
+            $projectDir: '%kernel.project_dir%'    # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
@@ -22,3 +22,12 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+            
+    # Explizite Konfiguration für den MonitoringService
+    App\Service\MonitoringService:
+        arguments:
+            $connection: '@doctrine.dbal.default_connection'
+            $userRepository: '@App\Repository\UserRepository'
+            $emailSentRepository: '@App\Repository\EmailSentRepository'
+            $csvFieldConfigRepository: '@App\Repository\CsvFieldConfigRepository'
+            $baseUrl: '%app.monitoring.base_url%'
