feat(deployment-scripts): Add WSL and Windows deployment scripts for improved application updates fix(email-subject): Update email subject to use informal language

--- a/.env
+++ b/.env
@@ -34,7 +34,7 @@ MAILER_DSN=smtp://localhost:25
 ###> app/email ###
 # Fallback-Parameter für E-Mail-Konfiguration (werden nur verwendet wenn keine Datenbank-Konfiguration vorhanden ist)
 APP_TEST_EMAIL=test@example.com
-APP_EMAIL_SUBJECT="Ihre Rückmeldung zu Ticket {{ticketId}}"
+APP_EMAIL_SUBJECT="Deine Rückmeldung zu Ticket {{ticketId}}"
 APP_SENDER_EMAIL=noreply@example.com
 APP_SENDER_NAME="Ticket-System"
 APP_TICKET_BASE_URL=https://www.ticket.de
