Add Xdebug support for code coverage and configure PHPUnit
- Installed Xdebug via PECL in the PHP Dockerfile for enhanced debugging and code coverage capabilities.
- Added Xdebug configuration file to enable coverage mode and set up client connection parameters.
- Created a PHPUnit configuration file for code coverage reporting, specifying test suite and logging options.

--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,8 @@
         "post-update-cmd": [
             "@auto-scripts"
         ]
+    ,
+    "coverage": "XDEBUG_MODE=coverage vendor/bin/phpunit -c phpunit.xml.dist --coverage-html build/coverage-html || true && cp -f coverage.xml build/logs/clover.xml || true"
     },
     "conflict": {
         "symfony/symfony": "*"
