--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -20,12 +20,18 @@ RUN docker-php-ext-install intl
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg
 RUN docker-php-ext-install gd
 
+# Install Xdebug for code coverage (PECL)
+RUN pecl update-channels && pecl install xdebug && docker-php-ext-enable xdebug
+
 # OPCache für verbesserte Leistung
 RUN docker-php-ext-install opcache
 COPY docker/php/opcache.ini /usr/local/etc/php/conf.d/opcache.ini
 
 # PHP-Konfiguration anpassen
 COPY docker/php/php.ini /usr/local/etc/php/conf.d/php.ini
+
+# Xdebug configuration (enabled for development/coverage)
+COPY docker/php/xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
 
 # Composer installieren
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
