--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,8 @@
         "symfony/maker-bundle": "^1.48",
         "symfony/stopwatch": "^6.4",
         "symfony/web-profiler-bundle": "^6.4",
+        "symfony/browser-kit": "^6.4",
+        "symfony/css-selector": "^6.4",
         "phpunit/phpunit": "^10.5",
         "phpstan/phpstan": "^1.11",
         "vimeo/psalm": "^5.26"
@@ -64,9 +66,8 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
-    ,
-    "coverage": "XDEBUG_MODE=coverage vendor/bin/phpunit -c phpunit.xml.dist --coverage-html build/coverage-html || true && cp -f coverage.xml build/logs/clover.xml || true"
+        ],
+        "coverage": "XDEBUG_MODE=coverage vendor/bin/phpunit -c phpunit.xml.dist --coverage-html build/coverage-html || true && cp -f coverage.xml build/logs/clover.xml || true"
     },
     "conflict": {
         "symfony/symfony": "*"
