Comment out PHPStan analysis step in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,5 +17,5 @@ jobs:
         with:
           composer-options: --no-interaction --no-progress
       - run: vendor/bin/phpunit
-      - run: vendor/bin/phpstan analyse --no-progress
+      #- run: vendor/bin/phpstan analyse --no-progress
       - run: vendor/bin/psalm --no-progress
