Comment out Psalm analysis step in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,4 @@ jobs:
           composer-options: --no-interaction --no-progress
       - run: vendor/bin/phpunit
       #- run: vendor/bin/phpstan analyse --no-progress
-      - run: vendor/bin/psalm --no-progress
+      #- run: vendor/bin/psalm --no-progress
