--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 /vendor/
 ###< symfony/framework-bundle ###
 .DS_Store
+
+###> phpunit/phpunit ###
+/phpunit.xml
+/.phpunit.cache/
+###< phpunit/phpunit ###
