--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "symfony/debug-bundle": "^7.2",
         "symfony/maker-bundle": "^1.48",
         "symfony/stopwatch": "^7.2",
-        "symfony/web-profiler-bundle": "^7.2"
+        "symfony/web-profiler-bundle": "^7.2",
+        "phpunit/phpunit": "^10.0"
     },
     "config": {
         "allow-plugins": {
