feat(Docker): add Xdebug for code coverage support and update Makefile

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.3-fpm-bullseye
+FROM php:8.3-fpm-bookworm
 
 # Installiere Abhängigkeiten
 RUN apt-get update && apt-get install -y \
@@ -32,6 +32,16 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 # Arbeitsverzeichnis festlegen
 WORKDIR /var/www/html
+
+## Xdebug für Code-Coverage installieren
+RUN pecl channel-update pecl.php.net && pecl install xdebug && docker-php-ext-enable xdebug
+# Copy xdebug configuration (mode off, trigger start)
+COPY docker/php/xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
+# Ensure the zend_extension is explicitly set to the installed xdebug.so
+RUN php -r "echo ini_get('extension_dir');" > /tmp/extension_dir && \
+    EXT_DIR=$(cat /tmp/extension_dir) && \
+    printf 'zend_extension=%s/xdebug.so\n' "$EXT_DIR" > /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini || true
+
 
 # Symfony-Cache-Berechtigung setzen
 RUN mkdir -p var/cache var/log && \
