--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-bundle": "^2.9",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
+        "nikic/php-parser": "^5.6",
         "symfony/console": "^7.3",
         "symfony/dotenv": "^7.3",
         "symfony/flex": "^2",
