Add UserCsvHelper service for CSV operations and refactor UserImportService to utilize it; include unit tests for CSV formatting and row mapping.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,6 +22,8 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+    # Explicit helper service for CSV operations
+    App\Service\UserCsvHelper: ~
       # Explizite Konfiguration für den MonitoringService
     App\Service\MonitoringService:
         arguments:
