feat: Implement EmailAddress value object with validation and normalization
- Added EmailAddress value object to ensure valid email formats and normalization.
- Integrated EmailAddress into UserImportService for user email validation.
- Created tests for EmailAddress to cover valid and invalid cases.

feat: Introduce SecurePassword value object for password management

- Added SecurePassword value object to handle password hashing, validation, and verification.
- Implemented strong password checks and secure password generation.
- Updated tests for AdminPassword to utilize SecurePassword for better security practices.

feat: Add TicketNumber value object for ticket management

- Created TicketNumber value object to enforce correct ticket number formats.
- Implemented validation for ticket number generation and equality checks.
- Added tests for TicketNumber to ensure proper functionality.

refactor: Update LoadDataFixturesCommandTest and SecurityControllerTest

- Refactored tests to utilize new password handling methods in AdminPassword.
- Updated assertions to improve test clarity and accuracy.

test: Enhance Csv validation tests for better error handling

- Updated assertions in CsvValidationServiceTest to use assertContainsEquals for better readability.
- Improved test coverage for CSV processing and validation scenarios.

test: Add comprehensive tests for new value objects

- Created tests for EmailAddress, SecurePassword, and TicketNumber to ensure robust validation and functionality.

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -8,6 +8,9 @@ doctrine:
 
         profiling_collect_backtrace: '%kernel.debug%'
         use_savepoints: true
+        types:
+            secure_password: App\Doctrine\Type\SecurePasswordType
+            email_address: App\Doctrine\Type\EmailAddressType
     orm:
         auto_generate_proxy_classes: true
         enable_lazy_ghost_objects: true
