--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -11,6 +11,7 @@ doctrine:
         types:
             secure_password: App\Doctrine\Type\SecurePasswordType
             email_address: App\Doctrine\Type\EmailAddressType
+            ticket_id: App\Doctrine\Type\TicketIdType
     orm:
         auto_generate_proxy_classes: true
         enable_lazy_ghost_objects: true
