feat: Implement user import events and handlers
- Added UserImportCompletedEvent, UserImportStartedEvent, and UserImportedEvent to handle user import lifecycle.
- Created AdminNotificationEventHandler to notify admins on user import completion and errors.
- Implemented AuditLogEventHandler for logging user import events.
- Developed FileLogEventHandler for structured logging of domain events to files.
- Introduced StatisticsEventHandler to collect and log statistics related to user imports and email events.
- Enhanced EmailService to dispatch events on email sent and failed.
- Updated UserImportService to dispatch events during user import process.
- Added tests for new events and handlers to ensure proper functionality.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -32,3 +32,22 @@ services:
             $emailSentRepository: '@App\Repository\EmailSentRepository'
             $csvFieldConfigRepository: '@App\Repository\CsvFieldConfigRepository'
             $baseUrl: '%app.monitoring.base_url%'
+            
+    # Event Handler mit Monolog Channels
+    App\EventHandler\AuditLogEventHandler:
+        arguments:
+            $auditLogger: '@monolog.logger.audit'
+            
+    App\EventHandler\StatisticsEventHandler:
+        arguments:
+            $entityManager: '@doctrine.orm.entity_manager'
+            $statisticsLogger: '@monolog.logger.statistics'
+            
+    App\EventHandler\AdminNotificationEventHandler:
+        arguments:
+            $logger: '@logger'
+            
+    # File Log Event Handler - deaktiviert, da wir jetzt Monolog verwenden  
+    # App\EventHandler\FileLogEventHandler:
+    #     arguments:
+    #         $projectDir: '%kernel.project_dir%'
