--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/form": "^7.3",
         "symfony/framework-bundle": "^7.3",
         "symfony/mailer": "^7.3",
+        "symfony/monolog-bundle": "^3.10",
         "symfony/runtime": "^7.3",
         "symfony/security-csrf": "7.3.*",
         "symfony/twig-bundle": "^7.3",
