--- a/docker/php/xdebug.ini
+++ b/docker/php/xdebug.ini
@@ -1,7 +1,22 @@
-; Xdebug configuration for coverage runs
+; Xdebug configuration for debugging and coverage
 ; Note: extension is enabled via docker-php-ext-enable (do not set zend_extension here)
-; Keep Xdebug inactive by default; enable it explicitly for coverage runs
-xdebug.mode=off
-xdebug.start_with_request=trigger
-; Reduce noise in logs
-xdebug.log_level=0
+
+; Enable debug mode for step debugging
+xdebug.mode=debug,develop
+
+; Start debugging session automatically when request is triggered
+xdebug.start_with_request=yes
+
+; For Docker on WSL/Linux, use WSL bridge IP
+xdebug.discover_client_host=no
+xdebug.client_host=172.24.255.162
+
+; Standard Xdebug port for VS Code
+xdebug.client_port=9003
+
+; IDE key for VS Code
+xdebug.idekey=vscode
+
+; Log Xdebug connections for debugging
+xdebug.log=/tmp/xdebug.log
+xdebug.log_level=7
