--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -15,5 +15,8 @@ framework:
         #app: cache.adapter.apcu
 
         # Namespaced pools use the above "app" backend by default
-        #pools:
+        pools:
+            # Use a non-PhpFiles adapter for property_info to avoid exported closures being returned
+            cache.property_info:
+                adapter: cache.adapter.filesystem
             #my.dedicated.cache: null
