--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -19,3 +19,25 @@ services:
     networks:
       - proxy-tier
     restart: unless-stopped
+  # MailHog für E-Mail-Testing
+  mailhog:
+    image: mailhog/mailhog
+    container_name: ticketumfrage_mailhog
+    ports:
+      - "1025:1025"  # SMTP Port
+      - "8025:8025"  # Web UI Port
+    networks:
+      - proxy-tier
+    restart: unless-stopped
+
+      # Eigener SMTP-Server für ARM-Kompatibilität (als Backup oder Alternative zu MailHog)
+  mailserver:
+    build:
+      context: ./docker/smtp
+      dockerfile: Dockerfile
+    container_name: ticketumfrage_mailserver
+    ports:
+      - "1026:25"  # SMTP Port (geändert um Konflikt mit MailHog zu vermeiden)
+    networks:
+      - proxy-tier
+    restart: unless-stopped
