refactor: EmailService in 4 Klassen aufgeteilt
- EmailService (Orchestrator, ~250 Zeilen statt 567)
- EmailTransportService (SMTP-Config, Transport, E-Mail-Versand)
- EmailRecordService (Record-Erstellung, Persistierung, Fehlerbehandlung)
- EmailComposer (Template-Auflösung, Placeholder-Ersetzung)
- EmailServiceInterface eingeführt für bessere Testbarkeit
- Controller auf EmailServiceInterface umgestellt
- Deprecated Methoden entfernt (getEmailConfiguration, getEmailTemplate, sendTicketEmails)
- Ungenutzte $projectDir-Dependency entfernt
- User-Lookup konsolidiert: 1x pro Ticket statt 3x
- 'Kein User gefunden'-Skip über einheitlichen Pfad (createAndDispatchSkippedRecord)
- 8 Reflection-Tests auf public-Methoden der neuen Klassen migriert
- Dependencies: 9 → 6 (EmailService), 3 (Transport), 3 (Record), 1 (Composer)
- 637 Tests grün

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,6 +22,9 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+    # Interface-Binding für EmailService
+    App\Service\EmailServiceInterface: '@App\Service\EmailService'
+
     # Explicit helper service for CSV operations
     App\Service\UserCsvHelper: ~
       # Explizite Konfiguration für den MonitoringService
