Refactor CSV processing tests to use CsvProcessingResult DTO
- Updated CsvProcessorTest to utilize CsvProcessingResult instead of array for results.
- Refactored CsvProcessorUsernameBugTest and CsvUploadOrchestrator tests to align with new result structure.
- Enhanced session management tests to handle UnknownUserWithTicket objects consistently.
- Improved test assertions for better clarity and accuracy.
- Removed legacy handling of unknown users and ensured all tests utilize the new data structures.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,6 +25,9 @@ services:
     # Interface-Binding für EmailService
     App\Service\EmailServiceInterface: '@App\Service\EmailService'
 
+    # Interface-Binding für CsvFileReader
+    App\Service\CsvFileReaderInterface: '@App\Service\CsvFileReader'
+
     # Explicit helper service for CSV operations
     App\Service\UserCsvHelper: ~
       # Explizite Konfiguration für den MonitoringService
