--- a/composer.json
+++ b/composer.json
@@ -29,17 +29,19 @@
         "twig/twig": "^3.5"
     },
     "require-dev": {
+        "nunomaduro/phpinsights": "^2.13",
+        "phpunit/phpunit": "^10.0",
         "symfony/debug-bundle": "7.4.*",
         "symfony/maker-bundle": "^1.48",
         "symfony/stopwatch": "7.4.*",
-        "symfony/web-profiler-bundle": "7.4.*",
-        "phpunit/phpunit": "^10.0"
+        "symfony/web-profiler-bundle": "7.4.*"
     },
     "config": {
         "allow-plugins": {
             "php-http/discovery": true,
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         },
         "sort-packages": true
     },
