--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "End-to-end Browsertests für phpticketmailer mit TestCafe",
   "scripts": {
-    "test:e2e": "testcafe 'chrome:headless' e2e/tests/ --reporter spec",
-    "test:e2e:headed": "testcafe chrome e2e/tests/ --reporter spec",
+    "test:e2e": "testcafe 'chromium:headless' e2e/tests/ --reporter spec",
+    "test:e2e:headed": "testcafe chromium e2e/tests/ --reporter spec",
     "test:e2e:firefox": "testcafe 'firefox:headless' e2e/tests/ --reporter spec"
   },
   "devDependencies": {
